objects/Repro_Loader_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attributes_Target_Product_Code__c</fullName>
        <label>Attributes Target Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook_Name__c</fullName>
        <label>Pricebook Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricelist_Id__c</fullName>
        <label>Pricelist Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Repro Loader Settings</label>
</CustomObject>